# a-study-on-audio

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
lessons/: 00-curriculum.html  01-foundations.html  02-formats-and-conversion.html  03-preprocessing.html  04-feature-extraction.html  05-speech-to-text.html  06-diarization.html  07-speaker-verification.html  08-emotion-recognition.html  09-text-to-speech.html  10-voice-cloning.html  11-capstone.html
lessons/assets/: style.css
practices/capstone/: README.md  pipeline.py  pyproject.toml
practices/diarization/: Dockerfile  README.md  core.py  requirements.txt
practices/diarization/app/: main.py
practices/emotion-recognition/: README.md  core.py  requirements.txt
practices/emotion-recognition/app/: main.py
practices/foundations/: Dockerfile  README.md  core_01_sampling.py  core_02_conversion.py  core_03_preprocessing.py  core_04_features.py  pyproject.toml
practices/foundations/app/: main.py
practices/speaker-verification/: Dockerfile  README.md  core.py  requirements.txt
practices/speaker-verification/app/: main.py
practices/speech-to-text/: Dockerfile  README.md  core.py  requirements.txt
practices/speech-to-text/app/: main.py
practices/text-to-speech/: Dockerfile  README.md  core.py  requirements.txt
practices/text-to-speech/app/: main.py
practices/voice-cloning/: Dockerfile  README.md  core.py  requirements.txt
practices/voice-cloning/app/: main.py
